--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </p>
   <a href="https://wa.me/+27767080854" class="cta-button" target="_blank">Message Us on WhatsApp</a>
   <footer>
-    &copy; 2025 FarmFetch. All rights reserved.
+    &copy; 2025 FarmFetch. All rights reserved for Biskado wabantweezy.
   </footer>
 </body>
 </html>
